<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/account"
                style="@style/Setting.Title"/>
            <TextView
                android:id="@+id/account"
                android:text="Test Account"
                style="@style/Setting.Content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/facebook"
                style="@style/Setting.Title"/>
            <TextView
                android:id="@+id/facebook"
                android:text="@string/disconnected"
                style="@style/Setting.Content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/unit"
                style="@style/Setting.Title"/>
            <RadioGroup
                android:id="@+id/unit_weight"
                style="@style/Setting.RadioGroup">
                <RadioButton
                    android:id="@+id/setting_kg"
                    android:text="@string/kg"
                    style="@style/Setting.RadioButton"/>
                <RadioButton
                    android:id="@+id/setting_lb"
                    android:text="@string/lb"
                    style="@style/Setting.RadioButton"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <RadioGroup
                android:id="@+id/unit_distance"
                style="@style/Setting.RadioGroup">
                <RadioButton
                    android:id="@+id/setting_km"
                    android:text="@string/setting_km"
                    style="@style/Setting.RadioButton"/>
                <RadioButton
                    android:id="@+id/setting_mi"
                    android:text="@string/mi"
                    style="@style/Setting.RadioButton"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <RadioGroup
                android:id="@+id/unit_height"
                style="@style/Setting.RadioGroup">
                <RadioButton
                    android:id="@+id/setting_cm"
                    android:text="@string/cm"
                    style="@style/Setting.RadioButton"/>
                <RadioButton
                    android:id="@+id/setting_in"
                    android:text="@string/in"
                    style="@style/Setting.RadioButton"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <RadioGroup
                android:id="@+id/unit_pace_speed"
                style="@style/Setting.RadioGroup">
                <RadioButton
                    android:id="@+id/setting_pace"
                    android:text="@string/speed"
                    style="@style/Setting.RadioButton"/>
                <RadioButton
                    android:id="@+id/setting_speed"
                    android:text="@string/pace"
                    style="@style/Setting.RadioButton"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <RadioGroup
                android:id="@+id/unit_degree"
                style="@style/Setting.RadioGroup">
                <RadioButton
                    android:id="@+id/setting_celsius"
                    android:text="@string/celsius"
                    style="@style/Setting.RadioButton"/>
                <RadioButton
                    android:id="@+id/setting_fahrenheit"
                    android:text="@string/fahrenheit"
                    style="@style/Setting.RadioButton"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/weight"
                style="@style/Setting.Title"/>
            <TextView
                android:id="@+id/weight"
                android:text="0 kg"
                style="@style/Setting.Content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting_height"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/height"
                style="@style/Setting.Title"/>
            <TextView
                android:id="@+id/height"
                android:text="0 cm"
                style="@style/Setting.Content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting_birth_date"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/birth_date"
                style="@style/Setting.Title"/>
            <TextView
                android:id="@+id/birth_date"
                android:text="1987/01/02"
                style="@style/Setting.Content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/auto_cue"
                style="@style/Setting.Title"/>
            <ToggleButton
                android:id="@+id/auto_cue_toggle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_toLeftOf="@+id/auto_cue_spinner"/>
            <Spinner
                android:id="@+id/auto_cue_spinner"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp">
            </Spinner>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/language"
                style="@style/Setting.Title"/>
            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp">
            </Spinner>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <Button
                android:text="@string/logout"
                android:textColor="@color/white"
                android:background="@drawable/music_runner_clickable_blue_round_border"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
