<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/running_info_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/Running.StatisticUnitBackground">
                <ImageButton
                    android:id="@+id/running_camera"
                    android:background="@drawable/camera"
                    android:layout_width="42dp"
                    android:layout_height="35dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginRight="0dp"
                style="@style/Running.StatisticUnitBackground">
                <TextView
                    android:id="@+id/running_duration"
                    android:text="@string/initial_duration"
                    style="@style/Running.StatisticNumber"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                style="@style/Running.StatisticUnitBackground">
                <TextView
                    android:text="@string/distance"
                    style="@style/Running.StatisticUnits"/>
                <TextView
                    android:id="@+id/running_distance"
                    android:text="@string/zero"
                    style="@style/Running.StatisticNumber"/>
                <TextView
                    android:id="@+id/running_distance_unit"
                    android:text="@string/km"
                    style="@style/Running.StatisticUnits"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                style="@style/Running.StatisticUnitBackground">
                <TextView
                    android:text="@string/calorie"
                    style="@style/Running.StatisticUnits"/>
                <TextView
                    android:id="@+id/running_calorie"
                    android:text="@string/zero"
                    android:textSize="30dp"
                    style="@style/Running.StatisticNumber"/>
                <TextView
                    android:text="@string/kcal"
                    style="@style/Running.StatisticUnits"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginRight="0dp"
                style="@style/Running.StatisticUnitBackground">
                <TextView
                    android:id="@+id/running_speed_title"
                    android:text="@string/speed"
                    style="@style/Running.StatisticUnits"/>
                <TextView
                    android:id="@+id/running_speed"
                    android:text="@string/zero"
                    android:textSize="30dp"
                    style="@style/Running.StatisticNumber"/>
                <TextView
                    android:id="@+id/running_speed_unit"
                    android:text="@string/speed_ratio"
                    style="@style/Running.StatisticUnits"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/running_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/running_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioGroup
            android:id="@+id/running_paging_radio_group"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/map_radio_button"
                android:layout_width="10dp"
                android:layout_height="10dp"
                style="@style/Running.RadioButton"/>
            <RadioButton
                android:id="@+id/straight_line_radio_button"
                android:checked="true"
                android:layout_width="10dp"
                android:layout_height="10dp"
                style="@style/Running.RadioButton" />
            <RadioButton
                android:id="@+id/music_controller_radio_button"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="0dp"
                style="@style/Running.RadioButton" />
        </RadioGroup>
        <RelativeLayout
            android:id="@+id/pause_container"
            style="@style/Running.ControlButtonContainer">
            <Button
                android:id="@+id/running_pause"
                android:background="@drawable/running_pause_button"
                android:text="@string/pause"
                style="@style/Running.ControlButton"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/done_resume_container"
            style="@style/Running.ControlButtonContainer"
            android:visibility="gone">
            <Button
                android:id="@+id/running_done"
                android:text="@string/done"
                android:background="@drawable/running_done_button"
                android:layout_marginRight="30dp"
                style="@style/Running.ControlButton"/>
            <Button
                android:id="@+id/running_resume"
                android:text="@string/resume"
                android:background="@drawable/running_resume_button"
                android:layout_toRightOf="@+id/running_done"
                style="@style/Running.ControlButton"/>
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>


