<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tiffany">
    <TextView
        android:id="@+id/app_name"
        android:text="Music Runner"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_name"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="0dp"
                style="@style/Login.EditTextContainer">
                <ImageView
                    android:src="@drawable/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
                <EditText
                    android:id="@+id/first_name"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    style="@style/Login.EditText"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                style="@style/Login.EditTextContainer">
                <EditText
                    android:id="@+id/last_name"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    style="@style/Login.EditText"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/Login.EditTextContainer">
            <ImageView
                android:src="@drawable/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/Login.EditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            style="@style/Login.EditTextContainer">
            <ImageView
                android:src="@drawable/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/Login.EditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/Login.EditTextContainer">
            <ImageView
                android:layout_width="23dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                style="@style/Login.EditText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/male_gary"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="0dp"
                    style="@style/Login.GenderRadioButton">
                </RadioButton>
                <RadioButton
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/female_gary"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="5dp"
                    style="@style/Login.GenderRadioButton">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>
        <Button
            android:text="@string/signup"
            android:textColor="@color/tiffany"
            android:background="@drawable/login_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:id="@+id/terms_policy"
                android:text="@string/terms_policy"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>