<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/tiffany">
        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:padding="10dp"
            android:background="@drawable/music_runner_green_button"
            style="@style/Finish.TopBar"/>
        <TextView
            android:text="@string/add_to_playlist"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finish_date"
            android:layout_centerInParent="true"
            style="@style/Finish.TopBar"/>
        <TextView
            android:id="@+id/ok"
            android:text="@string/ok"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/music_runner_green_button"
            style="@style/Finish.TopBar"/>
    </RelativeLayout>
    <com.hb.views.PinnedSectionListView
        android:id="@+id/playlist_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scrollbars="none"/>
</LinearLayout>